--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,8 @@ button img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 24px;
-  height: 24px;
+  width: 100%;
+  height: 100%;
   background-color: transparent;
   opacity: 0;
   transition: background-color 0.1s ease, opacity 0.1s ease;
